Starting and changes for parallelize